package ch.hslu.cas.msed.blobfish.game.exception;

public class MatchAbortedException extends RuntimeException {
    public MatchAbortedException(String message) {
        super(message);
    }
}
